karnc/tests/fixtures/positive/74_context_uses_and_consumes/src/commerce/orders.karn
context commerce.orders {
  uses commerce.money
  consumes commerce.payment

  exports transparent { Order }

  type Order = {
    total: Money,
  }
}
