karnc/tests/fixtures/negative/60_cross_context_money_mismatch/src/commerce/orders.karn
context commerce.orders {
  uses     commerce.money
  consumes commerce.payment

  -- `Amount` is in scope twice: once rebranded from commerce.money via
  -- `uses`, and once visible from commerce.payment via `consumes`. These
  -- are nominally distinct types — the v0.4 type-identity rule.
  type Order = {
    total: Amount,
  }
}
